# otus-python-homeworks

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py
homework_03/: models.py
homework_04/: app.py
homework_04/templates/: about.html  base.html  index.html
homework_05/: Dockerfile  Pipfile  README.md  web-app.py
homework_05/app/: __init__.py
homework_05/app/templates/: about.html  index.html
homework_05/tests/: test_app.py
homework_06/: docker-compose.yml
homework_06/web-app/: Dockerfile  app.py  config.py  entrypoint.sh  pyproject.toml
homework_06/web-app/migrations/versions/: cdcc8ac25b93_initial_migration.py
homework_06/web-app/templates/: about.html  base.html  index.html
homework_06/web-app/templates/skus/: add_category.html  add_sku.html  index.html
homework_06/web-app/web_app/models/: __init__.py  category.py  sku.py
homework_06/web-app/web_app/views/: __init__.py  skus.py
homework_07/online_store/templates/online_store/: about.html
homework_08/online_store/templates/online_store/: about.html
homework_09/online_store/templates/online_store/: about.html
homework_10/.github/workflows/: python-tests.yml
homework_10/online_store/templates/online_store/: about.html
homework_11/online_store/templates/online_store/: about.html
